--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,5 +19,12 @@ services:
       - "3000:3000"
     depends_on:
       - db
+  mailcatcher:
+    image: schickling/mailcatcher
+    container_name: mailcatcher
+    ports:
+      - '1080:1080'
+      - '1025:1025'
+
 volumes:
   postgres_volume:
